lesson 5 notes